--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ jlink {
     imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
-        name = 'app'
+        name = 'DYNAC Point Generation Tool'
     }
 }
 
