--- a/build.gradle
+++ b/build.gradle
@@ -58,9 +58,9 @@ jlink {
     launcher {
         name = 'DYNAC Point Generation Tool'
     }
-    jpackage {
-        imageOptions = ["--icon", "src/main/resources/tools/xml_tool/DYNAC Point Generation Tool.ico"]
-    }
+    //jpackage {
+        //imageOptions = ["--icon", "src/main/resources/tools/xml_tool/DYNAC Point Generation Tool.ico"]
+    //}
 }
 
 
